[#10] update to java 16-ea(!), add spotbugs check